# amazon-bedrock-agentcore-samples

./: CONTRIBUTORS.md
01-tutorials/: utils.py
01-tutorials/02-AgentCore-gateway/04-bearer-token-injection/: 01-bearer-token-injection.ipynb  clean_up.sh  requirements.txt  security_config.py
01-tutorials/02-AgentCore-gateway/07-bearer-token-injection/: utils.py
01-tutorials/03-AgentCore-identity/05-Outbound_Auth_3lo/: chatbot_app_cognito.py  oauth2_callback_server.py  requirements.txt  runtime_with_strands_and_egress_3lo.ipynb
01-tutorials/03-AgentCore-identity/06-Outbound_Auth_Github/: chatbot_app_cognito.py  oauth2_callback_server.py  requirements.txt  runtime.py  (+1 more)
01-tutorials/07-AgentCore-E2E/: lab-01-create-an-agent.ipynb  lab-02-agentcore-memory.ipynb  lab-03-agentcore-gateway.ipynb  lab-04-agentcore-runtime.ipynb
02-use-cases/A2A-multi-agent-incident-response/: .gitignore  README.md  cleanup.py  deploy.py  pyproject.toml
02-use-cases/A2A-multi-agent-incident-response/host_adk_agent/: .dockerignore  agent.py  main.py  pyproject.toml  requirements.txt  utils.py
02-use-cases/A2A-multi-agent-incident-response/web_search_openai_agents/: agent.py  agent_executor.py  main.py  memory_tool.py  pyproject.toml  requirements.txt  tools.py
02-use-cases/A2A-multi-agent-incident-response/web_search_openai_agents/prompt/: __init__.py
02-use-cases/A2A-multi-agent-incident-response/web_search_openai_agents/scripts/: get_m2m_token.py  utils.py
02-use-cases/farm-management-advisor/: 01_plant_advisor_gateway.ipynb  02_plant_advisor_runtime_mem.ipynb  requirements.txt
(+70 files in other folders)
