[project]
name = "host-adk"
version = "0.1.0"
description = "Host Agent using Google ASK on AgentCore Runtime"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk[a2a]>=1.16.0",
    "a2a-sdk",
    "httpx",
    "boto3",
    "bedrock-agentcore",
    "litellm>=1.78.0",
    "python-dotenv>=1.1.1",
]
