[project]
name = "web-search-openai-agents"
version = "0.1.0"
description = "Web Search using OpenAI Agents SDK on AgentCore Runtime"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.3.8",
    "bedrock-agentcore>=0.1.7",
    "bedrock-agentcore-starter-toolkit>=0.1.24",
    "openai-agents>=0.3.3",
    "openinference-instrumentation-openai-agents>=1.3.0",
    "tavily-python>=0.7.12",
]
